--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,6 +2,7 @@
 quentin:
   id:                        1
   login:                     quentin
+  name:                      Quintin
   email:                     quentin@example.com
   salt:                      356a192b7913b04c54574d18c28d46e6395428ab # SHA1('0')
   crypted_password:          fdaa286ce2a7c84a1bb2bfd485576be72eea4eeb # 'monkey'
@@ -15,6 +16,7 @@ quentin:
 aaron:
   id:                        2
   login:                     aaron
+  name:                      Aaron
   email:                     aaron@example.com
   salt:                      da4b9237bacccdf19c0760cab7aec4a8359010b0 # SHA1('1')
   crypted_password:          c52e27d74ad6bcfb71aba83d41e4d18c6c1e5f19 # 'monkey'
@@ -30,6 +32,7 @@ aaron:
 old_password_holder:
   id:                        3
   login:                     old_password_holder
+  name:                      OPH
   email:                     salty_dog@example.com
   salt:                      7e3041ebc2fc05a40c60028e2c4901a81035d3cd
   crypted_password:          00742970dc9e6319f8019fd54864d3ea740f04b1 # test
