Started to move towards WebRAT testing.
git-svn-id: svn+ssh://svn.beckproduct.com/svnroot/justinbeck/trunk@68 461604b8-cbb9-4c6a-b984-f4fa5d6bc773

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@ justinbeck.iml
 justinbeck.ipr
 justinbeck.iws
 
+.DS_Store
+/**/.DS_Store
 .idea
 log/*.log
-tmp/**/*
+tmp
 doc/api
 doc/app
 test/tmp
